# recordo

./: .gitignore  ARCHITECTURE.md  AUTHORS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  ROADMAP.md  doctor.sh  package-lock.json  pyproject.toml  setup.sh  uninstall.sh
.github/workflows/: ci.yml
config/: auto-detect.json.example  config.toml.example
keybindings/: apply-cinnamon.sh  cinnamon.dconf.template
share/applications/: recordo.desktop
share/autostart/: recordo-tray.desktop
src/recordo/: __init__.py  __main__.py  cli.py  client.py  config.py  daemon.py  ffmpeg_cmds.py  hardware.py  markdown_render.py  meeting_name.py  models_registry.py  notify.py  pipeline.py  recorder.py  rename.py  search.py  sources.py  subject.py  topics.py  tray.py  tui.py  tui_textual.py
src/recordo/gui/: __init__.py  __main__.py  app.py  async_client.py  page_control.py  page_models.py  page_settings.py  page_status.py  page_transcribe.py  theme.css  theme.py
src/recordo/models/: __init__.py
systemd/: recordo.service
tests/: test_atoms.py  test_atoms_progress.py  test_config.py  test_daemon.py  test_dashboard.py  test_ffmpeg_cmds.py  test_gui_smoke.py  test_hardware.py  test_markdown_render.py  test_meeting_name.py  test_models_registry.py  test_molecules.py  test_ollama_advanced.py  test_organisms.py  test_parakeet_onnx.py  test_phase_a.py  test_phase_b.py  test_phase_c.py  test_phase_m.py  test_pipeline.py  test_pipeline_store.py  test_recorder.py  test_recording_detail.py  test_rename.py  test_search.py  test_settings_set_nested.py  test_sources.py  test_subject.py  test_summarizer.py  test_summarizer_cloud.py  test_topics.py  test_transcribers_cohere.py  test_tray_state.py  test_tui_smoke.py  test_wizard.py
tests/e2e/: conftest.py  test_hardware_recommend.py  test_smoke_pipeline.py
vicinae/: record-last.sh  record-mark.sh  record-status.sh  record-toggle.sh
(+47 files in other folders)
